--- a/СoloringBookImageConverter/Properties/Resources.resx
+++ b/СoloringBookImageConverter/Properties/Resources.resx
@@ -114,4 +114,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="picture_format_filter" xml:space="preserve">
+	  <value>Picture files (*.png;*.jpg;*.bmp)|*.png;*.jpg;*.bmp</value>
+  </data>
 </root>
